# spice2sch

./: LICENSE  README.md  main.py  pyproject.toml  test_schem.sch  xor3.sch
src/spice2sch/: cli_def.py  main.py  models.py  spice.py
src/spice_to_sch/: constants.py  main.py  models.py
