[project]
name = "spice-to-sch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Eliah Reeves", email = "ereeclimb@gmail.com" }, { name = "Eric Chuang", email = "ericchuang94@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
spice-to-sch = "spice_to_sch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
